changed the directory structure

--- a/public/abeliophyllum.html
+++ b/public/abeliophyllum.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Flower Catalog Website</title>
-  <link rel="stylesheet" href="../css/abeliophyllum.css">
+  <link rel="stylesheet" href="./css/abeliophyllum.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="page-content">
 
       <div class="image">
-        <img src="../images/pbase-Abeliophyllum.jpg" alt="abeliophyllum">
+        <img src="./images/pbase-Abeliophyllum.jpg" alt="abeliophyllum">
       </div>
 
       <div class="info">
@@ -30,7 +30,7 @@
           samara 2 to 3 cm diameter.
 
           It is cultivated as an ornamental plant in Europe and North America. </p>
-        <a href="../pdfs/Abeliophyllum.pdf">Download as book</a>
+        <a href="./pdfs/Abeliophyllum.pdf">Download as book</a>
       </div>
 
     </div>
