--- a/public/ageratum.html
+++ b/public/ageratum.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Flower Catalog Website</title>
-  <link rel="stylesheet" href="../css/ageratum.css">
+  <link rel="stylesheet" href="./css/ageratum.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="page-content">
 
       <div class="image">
-        <img src="../images/pbase-agerantum.jpg" alt="Ageratum">
+        <img src="./images/pbase-agerantum.jpg" alt="Ageratum">
       </div>
 
       <div class="info">
@@ -27,7 +27,7 @@
 
           The fluffy flowers are lavender-blue, pink, lilac, or white; and spread in small compound umbels. They give
           small, dry fruits.</p>
-        <a href="../pdfs/Ageratum.pdf">Download as book</a>
+        <a href="./pdfs/Ageratum.pdf">Download as book</a>
       </div>
 
     </div>
