--- a/public/flowerCatlog.html
+++ b/public/flowerCatlog.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Flower Catalog Website</title>
-  <link rel="stylesheet" href="../css/flowerCatlog.css">
+  <link rel="stylesheet" href="./css/flowerCatlog.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <div class="page-content">
 
       <div class="image">
-        <img src="../images/freshorigins.jpg" alt="freshOrigins">
+        <img src="./images/freshorigins.jpg" alt="freshOrigins">
       </div>
 
       <nav class="navigation">
@@ -20,7 +20,7 @@
           <li><a href="./abeliophyllum.html">Abeliophyllum</a></li>
           <li><a href="./ageratum.html">Ageratum</a></li>
         </ul>
-        <div class="animated-img"><img src="../images/animated-flower-image-0021.gif" alt="animated-flower-image-0021">
+        <div class="animated-img"><img src="./images/animated-flower-image-0021.gif" alt="animated-flower-image-0021">
         </div>
 
         <a href="./guestBook.html">Guest Book</a>
