displaying the comments in the same page

--- a/public/abeliophyllum.html
+++ b/public/abeliophyllum.html
@@ -30,7 +30,7 @@
           samara 2 to 3 cm diameter.
 
           It is cultivated as an ornamental plant in Europe and North America. </p>
-        <a href="./pdfs/Abeliophyllum.pdf">Download as book</a>
+        <a href="./pdfs/Abeliophyllum.pdf" download="abeliophyllum.pdf">Download as book</a>
       </div>
 
     </div>
