--- a/public/ageratum.html
+++ b/public/ageratum.html
@@ -27,7 +27,7 @@
 
           The fluffy flowers are lavender-blue, pink, lilac, or white; and spread in small compound umbels. They give
           small, dry fruits.</p>
-        <a href="./pdfs/Ageratum.pdf">Download as book</a>
+        <a href="./pdfs/Ageratum.pdf" download="ageratum.pdf">Download as book</a>
       </div>
 
     </div>
