--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -23,7 +23,9 @@
     <br>
     <input type="submit" value="submit">
   </form>
-
+  <div style="border-top: 1px solid black;">
+    --comments--
+  </div>
 </body>
 
 </html>
