removed condition from handle comment

--- a/public/flowerCatlog.html
+++ b/public/flowerCatlog.html
@@ -23,7 +23,7 @@
         <div class="animated-img"><img src="./images/animated-flower-image-0021.gif" alt="animated-flower-image-0021">
         </div>
 
-        <a href="/comment">Guest Book</a>
+        <a href="/guest-book">Guest Book</a>
       </nav>
     </div>
 
