--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -10,7 +10,7 @@
 
   <h3>Leave comment</h3>
 
-  <form action="comment" method="get">
+  <form action="add-comment" method="get">
     <div>
       <label for="name">Name : </label>
       <input type="text" name="name" id="name">
