working for cookies and sessions

--- a/public/abeliophyllum.html
+++ b/public/abeliophyllum.html
@@ -32,7 +32,7 @@
           It is cultivated as an ornamental plant in Europe and North America. </p>
         <a href="./pdfs/Abeliophyllum.pdf" download="abeliophyllum.pdf">Download as book</a>
       </div>
-
+      <a href="/logout">Logout</a>
     </div>
   </div>
 </body>
