--- a/public/flowerCatlog.html
+++ b/public/flowerCatlog.html
@@ -16,7 +16,15 @@
 
 <body>
   <div>
-    <h2 class="sub-header">Flower Catalog</h2>
+    <div class="header">
+      <h2 class="sub-header">Flower Catalog</h2>
+      <!-- <form action="/logout" class="logout">
+        <input type="submit" value="Logout">
+      </form> -->
+      <a href="/logout">Logout</a>
+    </div>
+
+
 
     <div class="page-content">
 
@@ -37,7 +45,6 @@
         <a href="/guest-book">Guest Book</a>
       </nav>
     </div>
-
   </div>
 </body>
 
