--- a/public/ageratum.html
+++ b/public/ageratum.html
@@ -29,7 +29,7 @@
           small, dry fruits.</p>
         <a href="./pdfs/Ageratum.pdf" download="ageratum.pdf">Download as book</a>
       </div>
-
+      <a href="/logout">Logout</a>
     </div>
   </div>
 </body>
