upload file done

--- a/public/flowerCatlog.html
+++ b/public/flowerCatlog.html
@@ -34,6 +34,7 @@
 
       <nav class="navigation">
         <ul>
+          <li><a href="./fileUpload.html">Upload File</a></li>
           <li><a href="./abeliophyllum.html">Abeliophyllum</a></li>
           <li><a href="./ageratum.html">Ageratum</a></li>
         </ul>
@@ -43,6 +44,7 @@
         </div>
 
         <a href="/guest-book">Guest Book</a>
+
       </nav>
     </div>
   </div>
