Removed unused handlers

--- a/public/abeliophyllum.html
+++ b/public/abeliophyllum.html
@@ -8,7 +8,7 @@
 <body>
   <div class="page-closure">
 
-    <h1 class="page-header"><a href="./flowerCatlog.html">
+    <h1 class="page-header"><a href="./index.html">
         <<</a> Abeliophyllum</h1>
 
     <div class="page-content">
